# ductile-ui

./: .mise.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: check.yml
examples/: basic.py  confirm.py  paginaton.py  select_page.py
src/ductile/: __init__.py  state.py  view.py
src/ductile/controller/: controller.py  interaction_controller.py  messageable_controller.py  type.py
src/ductile/internal/: view.py
src/ductile/pagination/: __init__.py  page.py
src/ductile/types/: __init__.py  callback.py
src/ductile/ui/: __init__.py  button.py  modal.py  select.py
src/ductile/utils/: __init__.py  async_helper.py  call.py  chunk.py  debounce.py  logger.py  type_helper.py
src/ductile/validator/types/: embed.py  message.py  url.py
tests/: test_state.py
