[tool.poetry]
name = "ductile-ui"
version = "0.2.2"
description = "A library provides interactive ui for discord.py"
authors = ["sushi-chaaaan <mail@sushichan.live>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ductile", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
ruff = "^0.0.292"
poethepoet = "^0.24.1"

[tool.black]
target-version = ["py310"]
line-length = 125


[tool.ruff]
target-version = "py310"
line-length = 125
ignore = [
    "E203",
    # "D",
    "D100",
    "D104",
    "RUF001",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",  # 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "ANN101",  # missing-type-self: 引数selfには型ヒントは付けていないため
    "ANN102",  # missing-type-cls: 引数clsには型ヒントは付けていないため
    "ERA",     # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する
]
select = ["ALL"]

[tool.ruff.pydocstyle]
convention = "numpy"


[tool.ruff.per-file-ignores]
"/**/tests/**" = [
    "INP001", # add __init__.py to tests directory is too much work
    "S101",   # allow to use assert in tests
]
"/**/examples/**" = [
    "D",
    "INP001", # add __init__.py to examples directory is too much work
]

[tool.poe.tasks]
install = "poetry run pre-commit install"
lint = "poetry run ruff check ./src"
format = "poetry run black ./src"
export = "poetry export -f requirements.txt -o requirements.txt --only main --without-hashes"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
